Sample frames uniformly across subclip; Get all frames for clip

--- a/C3D_Feature_Extraction.ipynb
+++ b/C3D_Feature_Extraction.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -142,13 +142,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "11\n",
       "torch.Size([1, 16, 112, 112, 3])\n"
      ]
     }
@@ -157,19 +158,34 @@
     "import moviepy.editor as mp\n",
     "import torch\n",
     "\n",
-    "def get_frames(clip,t,count):\n",
+    "# t is the time of the first frame\n",
+    "# count is the number of frames\n",
+    "# clip_len is the number of seconds of the subclip\n",
+    "def sample_frames(clip,t=0,count=16,clip_len=1):\n",
     "    output = []\n",
     "    for i in range(count):\n",
-    "        frame = clip.get_frame(t)\n",
+    "        time = t+clip_len*(i/count) # Sample at equal intervals across the subclip\n",
+    "        frame = clip.get_frame(time) # Grab the frame at the specified time\n",
     "        output.append(frame)\n",
-    "        #frame = Image.fromarray(frame)\n",
     "    return torch.Tensor(output)\n",
     "\n",
-    "#url = \"https://s3-us-west-2.amazonaws.com/sq8geewpqu/samples-1k/06d501fd-a9ffc960.mov\"\n",
-    "#clip = mp.VideoFileClip(url,target_resolution=[112,112])\n",
-    "nn_input = get_frames(clip,0,16)\n",
-    "nn_input = nn_input.unsqueeze(0) # batch size 1\n",
-    "print(nn_input.shape)\n"
+    "# clip_start and clip_end are the times of the BDD-X Sample\n",
+    "#   e.g., the first sample for video [0] has clip_start=0, clip_end=11\n",
+    "def get_frames(clip,clip_start,clip_end,frame_count=16,clip_len=1):\n",
+    "    output = []\n",
+    "    for i in range(clip_start,clip_end,clip_len):\n",
+    "        output.append( sample_frames(clip,t=i,count=frame_count,clip_len=clip_len).unsqueeze(0) )\n",
+    "    return output\n",
+    "        \n",
+    "\n",
+    "url = \"https://s3-us-west-2.amazonaws.com/sq8geewpqu/samples-1k/06d501fd-a9ffc960.mov\"\n",
+    "clip = mp.VideoFileClip(url,target_resolution=[112,112])\n",
+    "# get_frames(.) returns a list, where each element is 16 frames chosen uniformly across a 1-second subclip\n",
+    "#   Each element of nn_inputs should be put through the network and then fed into the Transformer to find an\n",
+    "#   overall representation of the clip\n",
+    "nn_inputs = get_frames(clip,0,11)\n",
+    "print(len(nn_inputs))\n",
+    "print(nn_inputs[-1].shape)\n"
    ]
   },
   {
@@ -181,23 +197,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = MODEL.predict(nn_input)"
+    "output = MODEL.predict(nn_inputs[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.01700217 0.         0.         ... 0.         0.         0.06634136]]\n",
+      "[[0.01433312 0.         0.         ... 0.         0.         0.07065101]]\n",
       "(1, 4096)\n"
      ]
     }
