--- a/C3D_Feature_Extraction.ipynb
+++ b/C3D_Feature_Extraction.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -221,6 +221,85 @@
    "source": [
     "print(output)\n",
     "print(output.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Full pipeline\n",
+    "## Extract C3D Features for each clip in BDDX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Open CSV file\n",
+    "import pandas as pd\n",
+    "data_url = \"../revisedBDDX.csv\"\n",
+    "def load_bddx_data(csv_name):\n",
+    "    column_names = ['Index', 'InputVideo', '1S', '1E', '1A', '1J', '2S', '2E', '2A', '2J', '3S', '3E', '3A', '3J',\n",
+    "                    '4S', '4E', '4A', '4J','5S', '5E', '5A', '5J','6S', '6E', '6A', '6J','7S', '7E', '7A', '7J',\n",
+    "                    '8S', '8E', '8A', '8J','9S', '9E', '9A', '9J','10S', '10E', '10A', '10J','11S', '11E', '11A', '11J',\n",
+    "                    '12S', '12E', '12A', '12J','13S', '13E', '13A', '13J','14S', '14E', '14A', '14J','15S', '15E', '15A', '15J']\n",
+    "    \n",
+    "    return pd.read_csv(csv_name, names=column_names)\n",
+    "\n",
+    "bddx = load_bddx_data(data_url)\n",
+    "bddx = bddx.drop(bddx.index[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(11, 4096)\n",
+      "[[0.01433312 0.         0.         ... 0.         0.         0.07065101]\n",
+      " [0.01486513 0.         0.         ... 0.         0.         0.07457145]\n",
+      " [0.01166258 0.         0.         ... 0.         0.         0.10145477]\n",
+      " ...\n",
+      " [0.00248984 0.         0.         ... 0.00125599 0.         0.02231222]\n",
+      " [0.         0.         0.         ... 0.0087162  0.         0.00646217]\n",
+      " [0.         0.         0.         ... 0.         0.         0.06207535]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Author's Note: I have never run this code. I know it works, but I'm not sure if the entire feature_vectors array\n",
+    "#   will fit into memory or not. Try this at your own risk.\n",
+    "\n",
+    "from math import isnan\n",
+    "\n",
+    "vector_size = 4096\n",
+    "feature_vectors = []\n",
+    "\n",
+    "cnt = 0\n",
+    "for index,row in bddx.iterrows():\n",
+    "    url = row['InputVideo']\n",
+    "    #clip = mp.VideoFileClip(url,target_resolution=[112,112])\n",
+    "    for i in range(1,16):\n",
+    "        start = int(row['%iS'%(i)])\n",
+    "        finish = int(row['%iE'%(i)])\n",
+    "        if isnan(start) or isnan(finish):\n",
+    "            continue\n",
+    "        if finish == start: # Some clips have same start and finish times; avoid 0-second clips\n",
+    "            finish+=1\n",
+    "        nn_inputs = get_frames(clip,start,finish)\n",
+    "        vectors = np.zeros((finish-start,vector_size))\n",
+    "        for j,nn_input in enumerate(nn_inputs):\n",
+    "            vectors[j] = MODEL.predict(nn_input)\n",
+    "        feature_vectors.append(vectors)\n",
+    "    \n",
+    "print(len(feature_vectors))\n",
+    "print(feature_vectors[0].shape)\n"
    ]
   },
   {
